<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/tv_Welcome"
        android:textColor="@color/white"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/tvSignin"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="7dp"
        android:paddingTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_signin"
        android:textColor="@color/white"
        android:textFontWeight="@integer/material_motion_duration_medium_2"
        android:textSize="40sp" />

    <EditText
        android:autofillHints="name"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        android:id="@+id/etUsername"
        android:hint="@string/et_username"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_perm_identity_24"
        android:drawableStart="@drawable/ic_baseline_perm_identity_24"
        android:drawablePadding="15dp"
        android:inputType="text"
        />

    <EditText
        android:autofillHints="password"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:id="@+id/etPassword"
        android:hint="@string/et_password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_computer_24"
        android:drawableStart="@drawable/ic_baseline_computer_24"
        android:drawablePadding="15dp"
        android:inputType="numberPassword"
        />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/bt_LOGIN"
        android:textSize="20sp"
        />

    <ImageView
    android:layout_width="match_parent"
    android:layout_height="170dp"
   android:id="@+id/ivGlass"
    android:src="@drawable/magnifyingglass"
    android:layout_gravity="center_horizontal"
    android:contentDescription="@string/iv_image"
    />
</LinearLayout>