<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appppppp"
    android:orientation="vertical"
    android:weightSum="40"
    android:layout_weight="6"

    tools:context=".ShareActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="20sp"
        android:textStyle="bold"
        android:layout_weight="4"
        android:text="SHARE"
        android:textSize="30dp">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal"
        android:weightSum="6"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/tvPhone"
            android:text="@string/Phone"
            android:textSize="20sp"
            android:textColor="@color/black"

            android:layout_marginTop="30dp"
            />
        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:id="@+id/spin_phone"
            >

        </Spinner>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/etPhone"
            android:layout_weight="3.5"
            android:inputType="phone"
            android:textSize="20sp"
            />




    </LinearLayout>

    <Button
        android:id="@+id/btConfirm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:backgroundTint="#9A7AD3"
        android:text="@string/bt_confirm"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/shareMail"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:layout_marginTop="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_weight="4"
        android:backgroundTint="#FFEB3B"
        android:orientation="horizontal"
        android:weightSum="2">


        <EditText
            android:id="@+id/etMail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:hint="Enter Mail"
            android:inputType="textWebEmailAddress"
            android:textSize="20sp"
            ></EditText>

        <Button
            android:id="@+id/btShare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="Share"
            android:textColor="@color/black"
            android:backgroundTint="#9A7AD3"

            />
    </LinearLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        />

</LinearLayout>